medium code smells - maintainability